[package]
name = "MFEKinit"
version = "0.2.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
xmltree = "0.10"
# Logging
log = "0.4"
env_logger = "0.9"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
